[UPDATE] - added swagger generator
