# assets/swagger.json
@@ -1,209 +1,1 @@
-{
-   "swagger":"2.0",
-   "info":{
-      "title":"Swagger Json",
-      "description":"This is a generated swagger json for your sails project",
-      "termsOfService":"",
-      "contact":{
-         "name":"Nirav Adatiya",
-         "url":"https://github.com/logisticinfotech",
-         "email":"nirav@logisticinfotech.com"
-      },
-      "license":{
-         "name":"Apache 2.0",
-         "url":"http://www.apache.org/licenses/LICENSE-2.0.html"
-      },
-      "version":"1.0.0"
-   },
-   "host":"localhost:1337",
-   "basePath":"/",
-   "schemes":[
-      "http",
-      "https"
-   ],
-   "externalDocs":{
-      "url":"http://www.logisticinfotech.com"
-   },
-   "parameters":{
-      "WhereQueryParam":{
-         "in":"query",
-         "name":"where",
-         "required":false,
-         "type":"string",
-         "description":"This follows the standard from http://sailsjs.com/documentation/reference/blueprint-api/find-where"
-      },
-      "LimitQueryParam":{
-         "in":"query",
-         "name":"limit",
-         "required":false,
-         "type":"integer",
-         "description":"The maximum number of records to send back (useful for pagination). Defaults to undefined"
-      },
-      "SkipQueryParam":{
-         "in":"query",
-         "name":"skip",
-         "required":false,
-         "type":"integer",
-         "description":"The number of records to skip (useful for pagination)."
-      },
-      "SortQueryParam":{
-         "in":"query",
-         "name":"sort",
-         "required":false,
-         "type":"string",
-         "description":"The sort order. By default, returned records are sorted by primary key value in ascending order. e.g. ?sort=lastName%20ASC"
-      },
-      "PopulateQueryParam":{
-         "in":"query",
-         "name":"populate",
-         "required":false,
-         "type":"string",
-         "description":"check for better understanding -> http://sailsjs.com/documentation/reference/blueprint-api/find-where"
-      },
-      "PageQueryParam":{
-         "in":"query",
-         "name":"page",
-         "required":false,
-         "type":"integer",
-         "description":"This helps with pagination and when the limit is known"
-      },
-      "SelectQueryParam":{
-         "in":"query",
-         "name":"select",
-         "required":false,
-         "type":"string",
-         "description":"This helps with what to return for the user and its \",\" delimited"
-      },
-      "TokenHeaderParam":{
-         "in":"header",
-         "name":"token",
-         "required":false,
-         "type":"string",
-         "description":"Incase we want to send header information along our request"
-      },
-      "IDPathParam":{
-         "in":"path",
-         "name":"id",
-         "required":true,
-         "type":"string",
-         "description":"This is to identify a particular object out"
-      },
-      "PerPageQueryParam":{
-         "in":"query",
-         "name":"perPage",
-         "required":false,
-         "type":"integer",
-         "description":"This helps with pagination and when the limit is known for pagify"
-      }
-   },
-   "paths":{
-      "/authentication-service/login":{
-         "post":{
-            "tags":[
-               "Authentication-service"
-            ],
-            "summary":"",
-            "consumes":[
-               "application/json"
-            ],
-            "produces":[
-               "application/json"
-            ],
-            "responses":{
-               "200":{
-                  "description":"The requested resource"
-               },
-               "404":{
-                  "description":"Resource not found"
-               },
-               "500":{
-                  "description":"Internal server error"
-               }
-            },
-            "security":[
-               {
-                  "Authorization":[
-
-                  ]
-               }
-            ],
-            "parameters":[
-               {
-                  "name":"body",
-                  "in":"body",
-                  "required":true,
-                  "description":"An object defining our schema for this request",
-                  "schema":{
-                     "properties":{
-
-                     },
-                     "required":[
-
-                     ]
-                  }
-               }
-            ]
-         }
-      },
-      "/authentication-service/validate":{
-         "post":{
-            "tags":[
-               "Authentication-service"
-            ],
-            "summary":"",
-            "consumes":[
-               "application/json"
-            ],
-            "produces":[
-               "application/json"
-            ],
-            "responses":{
-               "200":{
-                  "description":"The requested resource"
-               },
-               "404":{
-                  "description":"Resource not found"
-               },
-               "500":{
-                  "description":"Internal server error"
-               }
-            },
-            "security":[
-               {
-                  "Authorization":[
-
-                  ]
-               }
-            ],
-            "parameters":[
-               {
-                  "name":"body",
-                  "in":"body",
-                  "required":true,
-                  "description":"An object defining our schema for this request",
-                  "schema":{
-                     "properties":{
-
-                     },
-                     "required":[
-
-                     ]
-                  }
-               }
-            ]
-         }
-      }
-   },
-   "definitions":{
-
-   },
-   "securityDefinitions":{
-      "Authorization":{
-         "type":"apiKey",
-         "description":"user JWT Auth Token",
-         "name":"Authorization",
-         "in":"header",
-         "flow":"password"
-      }
-   }
-}
+{"swagger":"2.0","info":{"title":"Swagger Json","description":"This is a generated swagger json for your sails project","termsOfService":"http://example.com/terms","contact":{"name":"Theophilus Omoregbee","url":"http://github.com/theo4u","email":"theo4u@ymail.com"},"license":{"name":"Apache 2.0","url":"http://www.apache.org/licenses/LICENSE-2.0.html"},"version":"1.0.0"},"host":"localhost:1337","basePath":"/","externalDocs":{"url":"http://theophilus.ziippii.com"},"tags":[],"definitions":{},"parameters":{"WhereQueryParam":{"in":"query","name":"where","required":false,"type":"string","description":"This follows the standard from http://sailsjs.com/documentation/reference/blueprint-api/find-where"},"LimitQueryParam":{"in":"query","name":"limit","required":false,"type":"integer","description":"The maximum number of records to send back (useful for pagination). Defaults to undefined"},"SkipQueryParam":{"in":"query","name":"skip","required":false,"type":"integer","description":"The number of records to skip (useful for pagination)."},"SortQueryParam":{"in":"query","name":"sort","required":false,"type":"string","description":"The sort order. By default, returned records are sorted by primary key value in ascending order. e.g. ?sort=lastName%20ASC"},"PopulateQueryParam":{"in":"query","name":"populate","required":false,"type":"string","description":"check for better understanding -> http://sailsjs.com/documentation/reference/blueprint-api/find-where"},"PageQueryParam":{"in":"query","name":"page","required":false,"type":"integer","description":"This helps with pagination and when the limit is known"},"SelectQueryParam":{"in":"query","name":"select","required":false,"type":"string","description":"This helps with what to return for the user and its \",\" delimited"},"TokenHeaderParam":{"in":"header","name":"token","required":false,"type":"string","description":"Incase we want to send header information along our request"},"IDPathParam":{"in":"path","name":"id","required":true,"type":"string","description":"This is to identify a particular object out"},"PerPageQueryParam":{"in":"query","name":"perPage","required":false,"type":"integer","description":"This helps with pagination and when the limit is known for pagify"}},"paths":{"/swagger":{"get":{"summary":"","description":"","tags":[""],"produces":["application/json"],"consumes":["application/json"],"parameters":[{"$ref":"#/parameters/TokenHeaderParam"}],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}}}},"/test/v1/test":{"get":{"summary":"","description":"","tags":[""],"produces":["application/json"],"consumes":["application/json"],"parameters":[{"$ref":"#/parameters/TokenHeaderParam"}],"responses":{"200":{"description":"The requested resource"},"404":{"description":"Resource not found"},"500":{"description":"Internal server error"}}}}}}
